--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -1,23 +1,146 @@
 {
   "general": {
     "version": 1,
-    "log-level": "WARNING",
+    "log_level": "WARNING",
     "language": "en_US"
   },
   "game": {
-    "render-distance": 12
+    "render_distance": 10,
+    "key_bindings": {
+      "minosoft:move_forward": {
+        "change": [
+          "W"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:move_left": {
+        "change": [
+          "A"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:move_back": {
+        "change": [
+          "S"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:move_right": {
+        "change": [
+          "D"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:sprint": {
+        "change": [
+          "LEFT_CONTROL"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:fly_up": {
+        "change": [
+          "SPACE"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:fly_down": {
+        "change": [
+          "LEFT_SHIFT"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:debug_screen": {
+        "release": [
+          "F3"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:debug_polygen": {
+        "modifier": [
+          "F4"
+        ],
+        "release": [
+          "P"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:debug_mouse_catch": {
+        "modifier": [
+          "F4"
+        ],
+        "release": [
+          "M"
+        ]
+      },
+      "minosoft:screenshot": {
+        "press": [
+          "F2"
+        ]
+      },
+      "minosoft:quit": {
+        "release": [
+          "ESCAPE"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
+      "minosoft:dummy_send_chat_message": {
+        "double_click": [
+          "K"
+        ]
+      }
+    }
   },
   "chat": {
     "colored": true,
     "obfuscated": true
   },
   "network": {
-    "fake-network-brand": false,
-    "show-lan-servers": true
+    "fake_network_brand": false,
+    "show_lan_servers": true
   },
   "accounts": {
     "selected": "",
-    "client-token": "",
+    "client_token": "",
     "entries": {}
   },
   "servers": {
@@ -25,10 +148,10 @@
   },
   "download": {
     "urls": {
-      "resources": "https://gitlab.com/Bixilon/minosoft/-/raw/development/data/resources/%s/%s.tar.gz?inline=false"
+      "resources": "https://gitlab.com/Bixilon/minosoft/-/raw/${branch}/data/resources/${hashPrefix}/${fullHash}.tar.gz?inline=false"
     }
   },
   "debug": {
-    "verify-assets": true
+    "verify_assets": true
   }
 }
