rendering: outsource zoom keybinding

--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -77,6 +77,16 @@
           ]
         ]
       },
+      "minosoft:zoom": {
+        "change": [
+          "C"
+        ],
+        "when": [
+          [
+            "minosoft:in_game"
+          ]
+        ]
+      },
       "minosoft:debug_screen": {
         "release": [
           "F3"
