--- a/pom.xml
+++ b/pom.xml
@@ -341,5 +341,10 @@
             <artifactId>oshi-core</artifactId>
             <version>5.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.moshi</groupId>
+            <artifactId>moshi-kotlin</artifactId>
+            <version>1.11.0</version>
+        </dependency>
     </dependencies>
 </project>
