--- a/pom.xml
+++ b/pom.xml
@@ -355,5 +355,10 @@
             <artifactId>mbf-kotlin</artifactId>
             <version>cc331b8c</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.31</version>
+        </dependency>
     </dependencies>
 </project>
