--- a/pom.xml
+++ b/pom.xml
@@ -255,9 +255,9 @@
             <version>2.8</version>
         </dependency>
         <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
+            <groupId>net.sourceforge.argparse4j</groupId>
+            <artifactId>argparse4j</artifactId>
+            <version>0.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.jline</groupId>
