--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,17 @@
   ~ This software is not affiliated with Mojang AB, the original developer of Minecraft.
   -->
 
- <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-     <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-     <groupId>de.bixilon</groupId>
-     <artifactId>Minosoft</artifactId>
-     <version>0.1</version>
-     <build>
-         <plugins>
-             <plugin>
-                 <groupId>org.jetbrains.kotlin</groupId>
-                 <artifactId>kotlin-maven-plugin</artifactId>
+    <groupId>de.bixilon</groupId>
+    <artifactId>Minosoft</artifactId>
+    <version>0.1-pre</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
                 <executions>
                     <execution>
@@ -196,8 +196,8 @@
         <exec.mainClass>de.bixilon.minosoft.Minosoft</exec.mainClass>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-        <javafx.version>18-ea+4</javafx.version>
-        <kotlin.version>1.5.21</kotlin.version>
+        <javafx.version>18-ea+7</javafx.version>
+        <kotlin.version>1.6.0</kotlin.version>
         <lwjgl.version>3.3.0-SNAPSHOT</lwjgl.version>
     </properties>
 
@@ -225,7 +225,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.8</version>
+            <version>2.8.9</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -268,7 +268,7 @@
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline</artifactId>
-            <version>3.20.0</version>
+            <version>3.21.0</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -344,7 +344,7 @@
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
-            <version>5.8.2</version>
+            <version>5.8.5</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.moshi</groupId>
