maven: add lwjgl natives for linux aarch64

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,18 @@
                 <lwjgl.natives>natives-windows</lwjgl.natives>
             </properties>
         </profile>
+        <profile>
+            <id>lwjgl-natives-linux-aarch64</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <arch>aarch64</arch>
+                </os>
+            </activation>
+            <properties>
+                <lwjgl.natives>natives-linux-arm64</lwjgl.natives>
+            </properties>
+        </profile>
     </profiles>
 
 
