--- a/pom.xml
+++ b/pom.xml
@@ -234,7 +234,7 @@
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <javafx.version>18-ea+7</javafx.version>
         <kotlin.version>1.6.0</kotlin.version>
-        <lwjgl.version>3.3.0-SNAPSHOT</lwjgl.version>
+        <lwjgl.version>3.3.0</lwjgl.version>
     </properties>
 
 
