fix macos build: add macos natives for x86_64

--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,18 @@
             </properties>
         </profile>
         <profile>
+            <id>lwjgl-natives-macos-x86_64</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <properties>
+                <lwjgl.natives>natives-macos</lwjgl.natives>
+            </properties>
+        </profile>
+        <profile>
             <id>lwjgl-natives-macos-aarch64</id>
             <activation>
                 <os>
