--- a/pom.xml
+++ b/pom.xml
@@ -429,5 +429,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
 </project>
