--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, macos-build ]
   pull_request:
     branches: [ master ]
 
@@ -54,3 +54,21 @@ jobs:
         with:
           name: minosoft-win64
           path: target/Minosoft-*.jar
+  build-mac:
+    runs-on: macos-11
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Upload macOS build
+        uses: actions/upload-artifact@v2
+        with:
+          name: macos-build
+          path: target/Minosoft-*.jar
+
