maven: provide explicit kotlin-reflect dependency

--- a/pom.xml
+++ b/pom.xml
@@ -405,6 +405,11 @@
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.gitlab.Bixilon</groupId>
             <artifactId>mbf-kotlin</artifactId>
             <version>cc331b8c</version>
