git: run pipeline only on master and merge requests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,5 +13,8 @@ stages:
 
 build:
   stage: build
+  only:
+    - master
+    - merge_requests
   script:
-    - 'mvn $MAVEN_CLI_OPTS verify'
+    - 'mvn $MAVEN_CLI_OPTS compile'
