GIT_SILENT git: allow silent commits

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,7 @@ stages:
 
 build:
   stage: build
-  only:
-    - master
-    - merge_requests
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ '/^((?!GIT_SILENT).)*$/' && ($CI_PIPELINE_SOURCE == "merge_request_event" || $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master")
   script:
     - 'mvn $MAVEN_CLI_OPTS compile'
