--- a/pom.xml
+++ b/pom.xml
@@ -244,8 +244,8 @@
         <exec.mainClass>de.bixilon.minosoft.Minosoft</exec.mainClass>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-        <javafx.version>18-ea+7</javafx.version>
-        <kotlin.version>1.6.0</kotlin.version>
+        <javafx.version>18-ea+8</javafx.version>
+        <kotlin.version>1.6.10</kotlin.version>
         <lwjgl.version>3.3.0</lwjgl.version>
     </properties>
 
@@ -392,7 +392,7 @@
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
-            <version>5.8.5</version>
+            <version>5.8.6</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -405,9 +405,9 @@
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.gitlab.Bixilon</groupId>
+            <groupId>de.bixilon.bixilon</groupId>
             <artifactId>mbf-kotlin</artifactId>
-            <version>cc331b8c</version>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -432,7 +432,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
-            <version>2.13.0</version>
+            <version>2.13.1</version>
         </dependency>
         <dependency>
             <groupId>org.kamranzafar</groupId>
@@ -447,7 +447,7 @@
         <dependency>
             <groupId>com.github.luben</groupId>
             <artifactId>zstd-jni</artifactId>
-            <version>1.5.0-4</version>
+            <version>1.5.0-5</version>
         </dependency>
         <dependency>
             <groupId>com.github.afester.javafx</groupId>
