--- a/pom.xml
+++ b/pom.xml
@@ -459,5 +459,11 @@
             <artifactId>kutil</artifactId>
             <version>1.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.72.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
