--- a/pom.xml
+++ b/pom.xml
@@ -465,5 +465,10 @@
             <version>4.1.73.Final</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>8.5.6</version>
+        </dependency>
     </dependencies>
 </project>
