--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 
     <profiles>
         <profile>
-            <id>lwjgl-natives-linux-amd64</id>
+            <id>natives-linux-amd64</id>
             <activation>
                 <os>
                     <family>unix</family>
@@ -148,11 +148,12 @@
                 </os>
             </activation>
             <properties>
-                <lwjgl.natives>natives-linux</lwjgl.natives>
+                <lwjgl.natives>linux</lwjgl.natives>
+                <zstd.natives>linux_amd64</zstd.natives>
             </properties>
         </profile>
         <profile>
-            <id>lwjgl-natives-linux-aarch64</id>
+            <id>natives-linux-aarch64</id>
             <activation>
                 <os>
                     <family>unix</family>
@@ -160,11 +161,12 @@
                 </os>
             </activation>
             <properties>
-                <lwjgl.natives>natives-linux-arm64</lwjgl.natives>
+                <lwjgl.natives>linux-arm64</lwjgl.natives>
+                <zstd.natives>linux_aarch64</zstd.natives>
             </properties>
         </profile>
         <profile>
-            <id>lwjgl-natives-macos-amd64</id>
+            <id>natives-macos-amd64</id>
             <activation>
                 <os>
                     <family>mac</family>
@@ -172,11 +174,12 @@
                 </os>
             </activation>
             <properties>
-                <lwjgl.natives>natives-macos</lwjgl.natives>
+                <lwjgl.natives>macos</lwjgl.natives>
+                <zstd.natives>darwin_x86_64</zstd.natives>
             </properties>
         </profile>
         <profile>
-            <id>lwjgl-natives-macos-x86_64</id>
+            <id>natives-macos-x86_64</id>
             <activation>
                 <os>
                     <family>mac</family>
@@ -184,11 +187,12 @@
                 </os>
             </activation>
             <properties>
-                <lwjgl.natives>natives-macos</lwjgl.natives>
+                <lwjgl.natives>macos</lwjgl.natives>
+                <zstd.natives>darwin_x64_64</zstd.natives>
             </properties>
         </profile>
         <profile>
-            <id>lwjgl-natives-macos-aarch64</id>
+            <id>natives-macos-aarch64</id>
             <activation>
                 <os>
                     <family>mac</family>
@@ -196,11 +200,12 @@
                 </os>
             </activation>
             <properties>
-                <lwjgl.natives>natives-macos-arm64</lwjgl.natives>
+                <lwjgl.natives>macos-arm64</lwjgl.natives>
+                <zstd.natives>darwin_aarch64</zstd.natives>
             </properties>
         </profile>
         <profile>
-            <id>lwjgl-natives-windows-amd64</id>
+            <id>natives-windows-amd64</id>
             <activation>
                 <os>
                     <family>windows</family>
@@ -208,11 +213,12 @@
                 </os>
             </activation>
             <properties>
-                <lwjgl.natives>natives-windows</lwjgl.natives>
+                <lwjgl.natives>windows</lwjgl.natives>
+                <zstd.natives>win_win64</zstd.natives>
             </properties>
         </profile>
         <profile>
-            <id>lwjgl-natives-windows-x86</id>
+            <id>natives-windows-x86</id>
             <activation>
                 <os>
                     <family>windows</family>
@@ -220,7 +226,8 @@
                 </os>
             </activation>
             <properties>
-                <lwjgl.natives>natives-windows-x86</lwjgl.natives>
+                <lwjgl.natives>windows-x86</lwjgl.natives>
+                <zstd.natives>win_x86</zstd.natives>
             </properties>
         </profile>
     </profiles>
@@ -248,6 +255,7 @@
         <kotlin.version>1.6.20</kotlin.version>
         <lwjgl.version>3.3.1</lwjgl.version>
         <ikonli.version>12.3.1</ikonli.version>
+        <netty.version>4.1.76.Final</netty.version>
     </properties>
 
 
@@ -352,27 +360,27 @@
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl</artifactId>
-            <classifier>${lwjgl.natives}</classifier>
+            <classifier>natives-${lwjgl.natives}</classifier>
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-glfw</artifactId>
-            <classifier>${lwjgl.natives}</classifier>
+            <classifier>natives-${lwjgl.natives}</classifier>
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-openal</artifactId>
-            <classifier>${lwjgl.natives}</classifier>
+            <classifier>natives-${lwjgl.natives}</classifier>
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-opengl</artifactId>
-            <classifier>${lwjgl.natives}</classifier>
+            <classifier>natives-${lwjgl.natives}</classifier>
         </dependency>
         <dependency>
             <groupId>org.lwjgl</groupId>
             <artifactId>lwjgl-stb</artifactId>
-            <classifier>${lwjgl.natives}</classifier>
+            <classifier>natives-${lwjgl.natives}</classifier>
         </dependency>
         <dependency>
             <groupId>org.l33tlabs.twl</groupId>
@@ -443,6 +451,7 @@
             <groupId>com.github.luben</groupId>
             <artifactId>zstd-jni</artifactId>
             <version>1.5.2-2</version>
+            <classifier>${zstd.natives}</classifier>
         </dependency>
         <dependency>
             <groupId>com.github.afester.javafx</groupId>
@@ -456,8 +465,20 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.75.Final</version>
+            <artifactId>netty-buffer</artifactId>
+            <version>${netty.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport-native-epoll</artifactId>
+            <version>${netty.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+            <version>${netty.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
