replace FranzXaver with javafx-svg, remove log4j

--- a/pom.xml
+++ b/pom.xml
@@ -280,17 +280,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.17.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.17.2</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.36</version>
@@ -411,7 +400,7 @@
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
-            <version>6.1.5</version>
+            <version>6.1.6</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -471,9 +460,9 @@
             <version>0.10.2</version>
         </dependency>
         <dependency>
-            <groupId>com.github.afester.javafx</groupId>
-            <artifactId>FranzXaver</artifactId>
-            <version>0.1</version>
+            <groupId>de.bixilon.javafx</groupId>
+            <artifactId>javafx-svg</artifactId>
+            <version>0.2</version>
         </dependency>
         <dependency>
             <groupId>de.bixilon</groupId>
