--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,5 +25,22 @@ jobs:
       - name: Upload Linux x64 build
         uses: actions/upload-artifact@v2
         with:
-          name: linux-x64-build
+          name: minosoft-linux-x64
+          path: target/Minosoft-*.jar
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Upload Windows x64 build
+        uses: actions/upload-artifact@v2
+        with:
+          name: minosoft-win64
           path: target/Minosoft-*.jar
