unit tests, wip command parsing

--- a/pom.xml
+++ b/pom.xml
@@ -499,5 +499,11 @@
             <artifactId>fastutil-core</artifactId>
             <version>8.5.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
