--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
                 <lwjgl.natives>linux</lwjgl.natives>
                 <zstd.natives>linux_amd64</zstd.natives>
                 <javafx.natives>linux</javafx.natives>
+                <netty.natives.epoll>x86_64</netty.natives.epoll>
             </properties>
         </profile>
         <profile>
@@ -165,6 +166,7 @@
                 <lwjgl.natives>linux-arm64</lwjgl.natives>
                 <zstd.natives>linux_aarch64</zstd.natives>
                 <javafx.natives>linux-aarch64</javafx.natives>
+                <netty.natives.epoll>aarch64</netty.natives.epoll>
             </properties>
         </profile>
         <profile>
@@ -236,6 +238,23 @@
                 <zstd.natives>win_x86</zstd.natives>
                 <javafx.natives>win-x86</javafx.natives>
             </properties>
+        </profile>
+
+        <profile>
+            <id>natives-windows-x86</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-transport-native-epoll</artifactId>
+                    <version>${netty.version}</version>
+                    <classifier>linux-${netty.natives.epoll}</classifier>
+                </dependency>
+            </dependencies>
         </profile>
     </profiles>
 
@@ -470,19 +489,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-buffer</artifactId>
             <version>${netty.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-transport-native-epoll</artifactId>
-            <version>${netty.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-handler</artifactId>
             <version>${netty.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>it.unimi.dsi</groupId>
