--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,22 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>not-generic-linux</id>
+            <activation>
+                <os>
+                    <family>!unix</family>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-transport-native-epoll</artifactId>
+                    <version>${netty.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
 
 
