--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master, macos-build ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
