--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
                 </executions>
                 <configuration>
                     <jvmTarget>${maven.compiler.target}</jvmTarget>
+                    <sourceDirs>
+                        <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                        <sourceDir>${project.basedir}/src/integration-test/kotlin</sourceDir>
+                    </sourceDirs>
                 </configuration>
             </plugin>
             <plugin>
@@ -138,6 +142,39 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.22.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.1</version>
+                <executions>
+                    <execution>
+                        <id>pre-integration-tests</id>
+                        <phase>pre-integration-test</phase>
+                        <configuration>
+                            <includes>
+                                <include>de/bixilon/minosoft/setup/**</include>
+                            </includes>
+                        </configuration>
+                        <goals>
+                            <goal>pre-integration-tests</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>integration-tests</id>
+                        <phase>integration-test</phase>
+                        <configuration>
+                            <configuration>
+                                <includes>
+                                    <include>de/bixilon/minosoft/test/**</include>
+                                </includes>
+                            </configuration>
+                        </configuration>
+                        <goals>
+                            <goal>integration-tests</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
