gradle: gitlab ci, build fat jar

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@
 #
 # This software is not affiliated with Mojang AB, the original developer of Minecraft.
 #
-kotlin.daemon.jvmargs=-Xmx1500M
+kotlin.daemon.jvmargs=-Xmx2G
 kotlin.code.style=official
 javafx.version=19
 lwjgl.version=3.3.2-SNAPSHOT
