--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,63 @@
-variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
-  MAVEN_CLI_OPTS: "--errors --fail-at-end --show-version"
+image: gradle:jdk11
 
-image: maven:3-openjdk-11
+variables:
+  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
+
+before_script:
+  - export GRADLE_USER_HOME=`pwd`/.gradle
 
 cache:
   paths:
-    - .m2/repository
+    - .gradle/wrapper
+    - .gradle/caches
 
 stages:
   - build
+  - test
+  - package
 
 build:
   stage: build
+  script: ./gradlew --build-cache assemble
   only:
     - master
     - merge_requests
-  script:
-    - 'mvn $MAVEN_CLI_OPTS verify'
+  cache:
+    key: "$CI_COMMIT_REF_NAME"
+    policy: push
+    paths:
+      - build
+      - .gradle
+
+test:
+  stage: test
+  script: ./gradlew check
+  only:
+    - master
+    - merge_requests
   artifacts:
+    when: always
     reports:
-      junit:
-        - target/surefire-reports/TEST-*.xml
+      junit: build/test-results/**/TEST-*.xml
+  cache:
+    key: "$CI_COMMIT_REF_NAME"
+    policy: pull
+    paths:
+      - build
+      - .gradle
+
+package:
+  stage: package
+  script: ./gradlew fatJar
+  only:
+    - master
+    - merge_requests
+  artifacts:
+    paths:
+      - build/libs/minosoft-fat-*.jar
+  cache:
+    key: "$CI_COMMIT_REF_NAME"
+    policy: pull
+    paths:
+      - build
+      - .gradle
