--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,9 @@ test:
 
 package:
   stage: package
-  script: ./gradlew fatJar
+  script:
+    - chmod 660 .gradle/ build/ -R
+    - ./gradlew fatJar
   only:
     - master
     - merge_requests
