--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,21 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        name: [ "" ]
-        os: [ "" ]
-        output: [ "" ]
-        include:
-          - name: Ubuntu latest
-            os: ubuntu-latest
-            output: linux64
-          - name: Windows latest
-            os: windows-latest
-            output: win-x64
-          - name: MacOS latest
-            os: macos-latest
-            output: macos-x64
+        os: [ "ubuntu-latest", "windows-latest", "macos-latest" ]
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.name }}
     steps:
       - uses: actions/checkout@v3
 
@@ -71,5 +58,5 @@ jobs:
       - name: Upload build
         uses: actions/upload-artifact@v2
         with:
-          name: minosoft-${{ matrix.output }}
+          name: 'minosoft-${{ contains(matrix.os, "windows") ? "win-x64" : contains(matrix.os, "linux") ? "linux-x64" : "macos-x64) }}'
           path: build/libs/minosoft-fat-*.jar
