--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
-          distribution: openjdk
+          distribution: zulu
           java-version: 11
 
       - name: Setup Gradle
