--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@
 kotlin.daemon.jvmargs=-Xmx2G
 kotlin.code.style=official
 javafx.version=19.0.2.1
-lwjgl.version=3.3.2-SNAPSHOT
+lwjgl.version=3.3.2
 ikonli.version=12.3.1
-netty.version=4.1.90.Final
-jackson.version=2.14.2
+netty.version=4.1.91.Final
+jackson.version=2.15.0
 kutil.version=1.21
